--- a/.github/workflows/cpp_test.yml
+++ b/.github/workflows/cpp_test.yml
@@ -24,7 +24,7 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, macos-latest]
-        build_type: [Debug]
+        build_type: [Release]
         cpp_compiler: [g++, clang++]
         include:
           - os: ubuntu-latest
