--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS     OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -Wpedantic -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -g")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # ——————————————————————————————————————————————————————————
 # 2) Header‑only library target
@@ -19,6 +20,19 @@ add_library(ds INTERFACE)
 target_include_directories(ds INTERFACE
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
+
+# ----- FETCH SFML -----
+
+# FetchContent SFML
+include(FetchContent)
+FetchContent_Declare(SFML
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG 3.0.1
+    GIT_SHALLOW ON
+    EXCLUDE_FROM_ALL
+    SYSTEM)
+FetchContent_MakeAvailable(SFML)
+
 
 # ——————————————————————————————————————————————————————————
 # 3) Enable CTest
@@ -33,7 +47,7 @@ file(GLOB TEST_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
 foreach(test_src IN LISTS TEST_SRCS)
   get_filename_component(test_name ${test_src} NAME_WE)
   add_executable(${test_name} ${test_src})
-  target_link_libraries(${test_name} PRIVATE ds)
+  target_link_libraries(${test_name} PRIVATE ds SFML::Graphics)
   add_test(NAME ${test_name} COMMAND ${test_name})
 endforeach()
 
@@ -45,6 +59,6 @@ file(GLOB EX_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 foreach(ex_src IN LISTS EX_SRCS)
   get_filename_component(ex_name ${ex_src} NAME_WE)
   add_executable(${ex_name} ${ex_src})
-  target_link_libraries(${ex_name} PRIVATE ds)
+  target_link_libraries(${ex_name} PRIVATE ds SFML::Graphics)
 endforeach()
 
