--- a/.github/workflows/cpp_test.yml
+++ b/.github/workflows/cpp_test.yml
@@ -37,6 +37,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install os-level deps
+        run: |
+          if [ "${{ runner.os }}" = "Linux" ]; then
+            sudo apt-get update
+            sudo apt-get install -y \
+              libxrandr-dev \
+              libxcursor-dev \
+              libxi-dev \
+              libudev-dev \
+              libflac-dev \
+              libvorbis-dev \
+              libgl1-mesa-dev \
+              libegl1-mesa-dev \
+              libdrm-dev \
+              libgbm-dev
+          elif [ "${{ runner.os }}" = "macOS" ]; then
+            brew update
+            brew install sfml
+          fi
+
       - name: Set reusable strings
         # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
         id: strings
