more workflow tweaks

--- a/.github/workflows/cpp_test.yml
+++ b/.github/workflows/cpp_test.yml
@@ -36,6 +36,10 @@ jobs:
           - os: macos-latest
             c_compiler: clang
             cpp_compiler: clang++
+        exclude:
+          - os: macos-latest
+            c_compiler: gcc
+            cpp_compiler: g++
 
     steps:
       - uses: actions/checkout@v4
