updating cmake to use windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,16 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_CXX_FLAGS_DEBUG
-    "-Wall -Wextra -Wpedantic -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -g"
-)
+
+# compiler specific options
+if(MSVC)
+  set(CMAKE_CXX_FLAGS_DEBUG "/W4 /Wx /Zi")
+else()
+  set(CMAKE_CXX_FLAGS_DEBUG
+      "-Wall -Wextra -Wpedantic -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -g"
+  )
+endif()
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # ——————————————————————————————————————————————————————————
