--- a/.github/workflows/cpp_test.yml
+++ b/.github/workflows/cpp_test.yml
@@ -24,6 +24,7 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         include:
+          # Linux clang / gcc
           - os: ubuntu-latest
             build_type: Release
             c_compiler: gcc
@@ -32,15 +33,23 @@ jobs:
             build_type: Release
             c_compiler: clang
             cpp_compiler: clang++
+          # MacOS Clang only
           - os: macos-latest
             build_type: Release
             c_compiler: clang
             cpp_compiler: clang++
+          # Windows VS2022 + Clang
+          - os: windows-latest
+            build_type: Release
+            generator: "Visual Studio 17 2022"
+            arch: x64
+            toolset: "ClangCL"
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install os-level deps
+      - name: Install os-level deps (unix systems)
+        if: runner.os == 'Linux' || runner.os == 'macOS'
         run: |
           if [ "${{ runner.os }}" = "Linux" ]; then
             sudo apt-get update
@@ -76,9 +85,10 @@ jobs:
         run: |
           echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      - name: Configure CMake
+      - name: Configure CMake (Linux/macOS)
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+        if: runner.os != 'Windows'
         run: >
           cmake -B ${{ steps.strings.outputs.build-output-dir }}
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
@@ -86,12 +96,33 @@ jobs:
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
           -S ${{ github.workspace }}
 
-      - name: Build
+      - name: Configure CMake (windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: >
+          cmake -S $env:GITHUB_WORKSPACE -B $env:GITHUB_WORKSPACE/BUILD \
+            -G ${{ matrix.generator }} \
+            -A ${{ matrix.arch }} \
+            -T ${{ matrix.toolset }}
+
+      - name: Build (Linux / MacOS)
+        if: runner.os != 'Windows'
         # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
         run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      
+      - name: Build (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: cmake --build $env:GITHUB_WORKSPACE/build --config ${{ matrix.build_type }
 
-      - name: Test
+      - name: Test (Linux/MacOS)
         working-directory: ${{ steps.strings.outputs.build-output-dir }}
         # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest --build-config ${{ matrix.build_type }}
+
+      - name: Test (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        working-directory: $env:GITHUB_WORKSPACE/build
+        run: ctest -C ${{ matrix.build_type }} --output-on-failure
