--- a/.github/workflows/cpp_test.yml
+++ b/.github/workflows/cpp_test.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Build (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
-        run: cmake --build $env:GITHUB_WORKSPACE/build --config ${{ matrix.build_type }
+        run: cmake --build $env:GITHUB_WORKSPACE/build --config ${{ matrix.build_type }}
 
       - name: Test (Linux/MacOS)
         working-directory: ${{ steps.strings.outputs.build-output-dir }}
