remade cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-# compiler specific options
-if(MSVC AND CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  set(CMAKE_CXX_FLAGS_DEBUG
-      "-Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -g")
-elseif(MSVC)
-  set(CMAKE_CXX_FLAGS_DEBUG "/W4 /Zi")
-else()
-  set(CMAKE_CXX_FLAGS_DEBUG
-      "-Wall -Wextra -Wpedantic -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -g"
-  )
-endif()
-
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+# compiler specific options if(MSVC AND CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+# set(CMAKE_CXX_FLAGS_DEBUG "-Weverything -Wno-c++98-compat
+# -Wno-c++98-compat-pedantic -g") elseif(MSVC) set(CMAKE_CXX_FLAGS_DEBUG "/W4
+# /Zi") else() set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -Wpedantic -Weverything
+# -Wno-c++98-compat -Wno-c++98-compat-pedantic -g" ) endif()
 
 # ——————————————————————————————————————————————————————————
 # 2) Header‑only library target
@@ -58,6 +51,26 @@ foreach(test_src IN LISTS TEST_SRCS)
   get_filename_component(test_name ${test_src} NAME_WE)
   add_executable(${test_name} ${test_src})
   target_link_libraries(${test_name} PRIVATE ds SFML::Graphics)
+
+  if(MSVC)
+    target_compile_options(${test_name} PRIVATE $<$<CONFIG:DEBUG>: /W4 /Zi>)
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_compile_options(
+      ${test_name} PRIVATE $<$<CONFIG:DEBUG>: -Weverything -Wno-c++98-compat
+                           -Wno-c++98-compat-pedantic -g>)
+  else()
+    target_compile_options(
+      ${test_name}
+      PRIVATE $<$<CONFIG:DEBUG>:
+              -Wall
+              -Wextra
+              -Wpedantic
+              -Weverything
+              -Wno-c++98-compat
+              -Wno-c++98-compat-pedantic
+              -g>)
+  endif()
+
   add_test(NAME ${test_name} COMMAND ${test_name})
 endforeach()
 
@@ -70,14 +83,39 @@ endforeach()
 # MAIN EXECUTABLES
 file(GLOB LIB_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/lib/*.cpp")
 
+# helper for adding warning flags during debug
+macro(ADD_COMPILE_OPTIONS_PER_OS target)
+  if(MSVC)
+    target_compile_options(${target} PRIVATE $<$<CONFIG:DEBUG>: /W4 /Zi>)
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_compile_options(
+      ${target} PRIVATE $<$<CONFIG:DEBUG>: -Weverything -Wno-c++98-compat
+                        -Wno-c++98-compat-pedantic -g>)
+  else()
+    target_compile_options(
+      ${target}
+      PRIVATE $<$<CONFIG:DEBUG>:
+              -Wall
+              -Wextra
+              -Wpedantic
+              -Weverything
+              -Wno-c++98-compat
+              -Wno-c++98-compat-pedantic
+              -g>)
+  endif()
+endmacro()
+
 add_executable(test_sfml src/test_sfml.cpp ${LIB_SRC})
 target_include_directories(test_sfml PRIVATE src/lib)
 target_link_libraries(test_sfml PRIVATE ds SFML::Graphics)
+add_compile_options_per_os(test_sfml)
 
 add_executable(maze src/maze.cpp ${LIB_SRC})
 target_include_directories(maze PRIVATE src/lib)
 target_link_libraries(maze PRIVATE ds SFML::Graphics)
+add_compile_options_per_os(maze)
 
 add_executable(test_maze src/test_maze.cpp ${LIB_SRC})
 target_include_directories(test_maze PRIVATE src/lib)
 target_link_libraries(test_maze PRIVATE ds SFML::Graphics)
+add_compile_options_per_os(test_maze)
